kube-cluster/guide/projects/instavote/staging/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    role: vote
  namespace: staging
spec:
  selector:
    role: vote
    version: v1
  ports:
    - port: 8080 ## For Cluster and For ExternalIP
      targetPort: 80 ## For Pod
  type: NodePort
